# promptly

./: Cargo.toml  README.md  promptly.sh
src/: error.rs  main.rs
