[package]
name = "promptly"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.7", features = ["derive"] }
atty = "0.2.14"
regex = "1.10.5"
